<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    android:padding="@dimen/outer_layout_padding">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/box_margins"
        android:background="@drawable/background_box"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/ic_launcher" />
        </LinearLayout>

        <TextView
            android:id="@+id/appNameTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:text="@string/app_name"
            android:textSize="@dimen/large_text_size" />

    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/box_margins"
        android:background="@drawable/background_box"
        android:layout_gravity="center_horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:text="@string/info_instructions_title"
                android:textSize="@dimen/medium_text_size" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:text="@string/info_instructions"
                android:textSize="@dimen/small_text_size" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="12dp"
                android:layout_gravity="center_horizontal" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:text="@string/info_credits_title"
                android:textSize="@dimen/medium_text_size" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:text="@string/info_credits"
                android:gravity="center"
                android:textSize="@dimen/small_text_size" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="12dp"
                android:layout_gravity="center_horizontal" />

            <Button
                android:id="@+id/backButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/info_back"
                android:textSize="@dimen/small_text_size" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>